--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "algolia/algoliasearch-client-php": "^1.25",
         "barryvdh/laravel-debugbar": "~2.4",
         "doctrine/dbal": "^2.7",
         "laravel/framework": "5.4.*",
+        "laravel/scout": "^4.0",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
