--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-debugbar": "~2.4",
         "doctrine/dbal": "^2.7",
         "laravel/framework": "5.4.*",
+        "laravel/passport": "^6.0",
         "laravel/scout": "^4.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
